src/pages/index.module.scss
@import '../vendors.scss';
@import '../variables.scss';

.container {
  margin: 16% 8%;
  @include font-size(2);

  > p {
    color: $text-main;
  }

  > p:first-of-type {
    margin-bottom: 2%;
  }

  > p:nth-last-of-type(2) {
    margin-bottom: 16%;
  }

  @media (min-width: $viewport-12) {
    margin-top: 8%;

    > p:nth-last-of-type(2) {
      margin-bottom: 4%;
    }
  }
}

